# physalia-automators

./: .gitignore  .pylintrc  ChangeLog  LICENSE  README.md  requirements.txt  results.csv  results_before_change_app.csv  results_times.md  setup.cfg  tox.ini
apks/: RobotiumTest.apk  RobotiumTest_routines.apk  app-debug.apk  test_routines.apk  testapp-calabash-resigned.apk  testapp-debug.apk  testapp.apk
experiments_part_2/: README.md  human_consumption.py  idle_time.py  requirements.txt  results_human_consumption.csv  results_idle_time.csv
physalia-automators/: android_view_client_use_case.py  appium_usecase.py  calabash_usecase.py  espresso_usecase.py  monkeyrunner.py  monkeyrunner_jython.py  monkeyrunner_usecase.py  python_ui_automator_usecase.py  robotium_usecase.py  selendroid.py  time_boundaries.py  ui_automator_usecase.py  utils.py
physalia-automators/calabash-ruby/features/: my_first.feature
physalia-automators/calabash-ruby/test_servers/: 8d473d939097199d545f217a871e6515_0.9.0.apk  d1bc8d62efe27081c05478233d871c62_0.9.0.apk  e2f2aad14864261b0aa47ee098e98511_0.9.0.apk
physalia_automators/: android_view_client_use_case.py  appium_usecase.py  calabash_usecase.py  cli.py  espresso_usecase.py  monkeyrunner_jython.py  monkeyrunner_usecase.py  python_ui_automator_usecase.py  reports.py  robotium_usecase.py  selendroid.py  time_boundaries.py  ui_automator_usecase.py  utils.py
physalia_automators/calabash-ruby/: Gemfile
physalia_automators/calabash-ruby/features/: physalia_test_app.feature
physalia_automators/constants/: loop_count.py
(+4 files in other folders)
