[metadata]
name = physalia_automators
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Project to compare UI Automated interaction frameworks using Physalia
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=2.7
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: System :: Benchmark
[files]
packages =
    physalia_automators

[entry_points]
console_scripts =
    physalia-automators-run = physalia_automators.cli:tool

[flake8]
filename = ./physalia/**.py
exclude = physalia/third_party/*.py
ignore = E101,E241
